--- a/style/main.scss
+++ b/style/main.scss
@@ -2799,6 +2799,11 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .transition-transform {
+    transition-property: transform, translate, scale, rotate;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
@@ -2939,9 +2944,41 @@
       scale: var(--tw-scale-x) var(--tw-scale-y);
     }
   }
+  .max-2xl\:absolute {
+    @media (width < 96rem) {
+      position: absolute;
+    }
+  }
+  .max-2xl\:relative {
+    @media (width < 96rem) {
+      position: relative;
+    }
+  }
+  .max-2xl\:top-0 {
+    @media (width < 96rem) {
+      top: calc(var(--spacing) * 0);
+    }
+  }
+  .max-2xl\:right-0 {
+    @media (width < 96rem) {
+      right: calc(var(--spacing) * 0);
+    }
+  }
   .max-2xl\:hidden {
     @media (width < 96rem) {
       display: none;
+    }
+  }
+  .max-2xl\:translate-x-0 {
+    @media (width < 96rem) {
+      --tw-translate-x: calc(var(--spacing) * 0);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .max-2xl\:translate-x-100 {
+    @media (width < 96rem) {
+      --tw-translate-x: calc(var(--spacing) * 100);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
   .max-2xl\:items-center {
@@ -3048,6 +3085,11 @@
   .\32 xl\:gap-2 {
     @media (width >= 96rem) {
       gap: calc(var(--spacing) * 2);
+    }
+  }
+  .\32 xl\:bg-base-100 {
+    @media (width >= 96rem) {
+      background-color: var(--color-base-100);
     }
   }
   .\32 xl\:p-0\.5 {
@@ -3396,6 +3438,36 @@
       --tw-scale-y: 95%;
       --tw-scale-z: 95%;
       scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  .button-navbar-activated {
+    cursor: pointer;
+    border-radius: calc(infinity * 1px);
+    background-color: var(--color-base-100);
+    padding: calc(var(--spacing) * 1);
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+    --tw-duration: 250ms;
+    transition-duration: 250ms;
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in srgb, var(--color-base-content) 20%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
+        }
+      }
+    }
+    &:active {
+      --tw-scale-x: 95%;
+      --tw-scale-y: 95%;
+      --tw-scale-z: 95%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+    @media (width >= 96rem) {
+      padding: calc(var(--spacing) * 2);
     }
   }
   .navbar-icon-size {
@@ -3989,6 +4061,21 @@ textarea::-webkit-scrollbar {
   inherits: false;
   initial-value: 1;
 }
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -4043,6 +4130,9 @@ textarea::-webkit-scrollbar {
       --tw-scale-x: 1;
       --tw-scale-y: 1;
       --tw-scale-z: 1;
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
     }
   }
 }
