--- a/input.css
+++ b/input.css
@@ -110,6 +110,14 @@
     .editor-button-size {
         @apply h-4 w-4;
     }
+
+    .left_sidebar_base_class {
+        @apply flex flex-col justify-start w-60 h-full overflow-y-auto p-2 max-2xl:bg-base-300 max-2xl:absolute max-2xl:z-1 max-2xl:top-0 max-2xl:left-0;
+    }
+
+    .right_sidebar_base_class {
+        @apply flex flex-col justify-start w-80 h-full overflow-y-auto px-3 py-2 max-2xl:bg-base-300 max-2xl:absolute max-2xl:z-1 max-2xl:top-0 max-2xl:right-0;
+    }
 }
 
 /* Styles for the spoiler blocks */
