--- a/style/main.scss
+++ b/style/main.scss
@@ -255,70 +255,6 @@
       }
     }
   }
-  .drawer-side {
-    pointer-events: none;
-    visibility: hidden;
-    position: fixed;
-    inset-inline-start: calc(0.25rem * 0);
-    top: calc(0.25rem * 0);
-    z-index: 1;
-    grid-column-start: 1;
-    grid-row-start: 1;
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-    grid-template-rows: repeat(1, minmax(0, 1fr));
-    align-items: flex-start;
-    justify-items: start;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    overscroll-behavior: contain;
-    opacity: 0%;
-    transition: opacity 0.2s ease-out 0.1s allow-discrete, visibility 0.3s ease-out 0.1s allow-discrete;
-    height: 100vh;
-    height: 100dvh;
-    > .drawer-overlay {
-      position: sticky;
-      top: calc(0.25rem * 0);
-      cursor: pointer;
-      place-self: stretch;
-      background-color: oklch(0% 0 0 / 40%);
-    }
-    > * {
-      grid-column-start: 1;
-      grid-row-start: 1;
-    }
-    > *:not(.drawer-overlay) {
-      will-change: transform;
-      transition: translate 0.3s ease-out;
-      translate: -100%;
-      [dir="rtl"] & {
-        translate: 100%;
-      }
-    }
-  }
-  .drawer-toggle {
-    position: fixed;
-    height: calc(0.25rem * 0);
-    width: calc(0.25rem * 0);
-    appearance: none;
-    opacity: 0%;
-    &:checked {
-      & ~ .drawer-side {
-        pointer-events: auto;
-        visibility: visible;
-        overflow-y: auto;
-        opacity: 100%;
-        & > *:not(.drawer-overlay) {
-          translate: 0%;
-        }
-      }
-    }
-    &:focus-visible ~ .drawer-content label.drawer-button {
-      outline: 2px solid;
-      outline-offset: 2px;
-    }
-  }
   .tooltip {
     position: relative;
     display: inline-block;
@@ -1373,6 +1309,9 @@
       }
     }
   }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -1666,11 +1605,6 @@
       grid-column-start: 1;
       grid-row-start: 1;
     }
-  }
-  .drawer-content {
-    grid-column-start: 2;
-    grid-row-start: 1;
-    min-width: calc(0.25rem * 0);
   }
   .container {
     width: 100%;
@@ -2153,12 +2087,6 @@
   .w-28 {
     width: calc(var(--spacing) * 28);
   }
-  .w-60 {
-    width: calc(var(--spacing) * 60);
-  }
-  .w-80 {
-    width: calc(var(--spacing) * 80);
-  }
   .w-86 {
     width: calc(var(--spacing) * 86);
   }
@@ -2448,6 +2376,12 @@
   .bg-base-200 {
     background-color: var(--color-base-200);
   }
+  .bg-base-200\/50 {
+    background-color: var(--color-base-200);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-base-200) 50%, transparent);
+    }
+  }
   .bg-base-200\/75 {
     background-color: var(--color-base-200);
     @supports (color: color-mix(in lab, red, red)) {
@@ -2591,9 +2525,6 @@
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
-  }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -2949,29 +2880,15 @@
       scale: var(--tw-scale-x) var(--tw-scale-y);
     }
   }
-  .max-2xl\:absolute {
-    @media (width < 96rem) {
-      position: absolute;
-    }
-  }
-  .max-2xl\:relative {
-    @media (width < 96rem) {
-      position: relative;
-    }
-  }
-  .max-2xl\:top-0 {
-    @media (width < 96rem) {
-      top: calc(var(--spacing) * 0);
-    }
-  }
-  .max-2xl\:right-0 {
-    @media (width < 96rem) {
-      right: calc(var(--spacing) * 0);
-    }
-  }
   .max-2xl\:hidden {
     @media (width < 96rem) {
       display: none;
+    }
+  }
+  .max-2xl\:-translate-x-100 {
+    @media (width < 96rem) {
+      --tw-translate-x: calc(var(--spacing) * -100);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
   .max-2xl\:translate-x-0 {
@@ -2989,11 +2906,6 @@
   .max-2xl\:items-center {
     @media (width < 96rem) {
       align-items: center;
-    }
-  }
-  .max-2xl\:bg-base-300 {
-    @media (width < 96rem) {
-      background-color: var(--color-base-300);
     }
   }
   .max-2xl\:checkbox-sm {
@@ -3090,11 +3002,6 @@
   .\32 xl\:gap-2 {
     @media (width >= 96rem) {
       gap: calc(var(--spacing) * 2);
-    }
-  }
-  .\32 xl\:bg-base-100 {
-    @media (width >= 96rem) {
-      background-color: var(--color-base-100);
     }
   }
   .\32 xl\:p-0\.5 {
@@ -3518,6 +3425,55 @@
   .editor-button-size {
     height: calc(var(--spacing) * 4);
     width: calc(var(--spacing) * 4);
+  }
+  .left_sidebar_base_class {
+    display: flex;
+    height: 100%;
+    width: calc(var(--spacing) * 60);
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow-y: auto;
+    padding: calc(var(--spacing) * 2);
+    @media (width < 96rem) {
+      position: absolute;
+    }
+    @media (width < 96rem) {
+      top: calc(var(--spacing) * 0);
+    }
+    @media (width < 96rem) {
+      left: calc(var(--spacing) * 0);
+    }
+    @media (width < 96rem) {
+      z-index: 1;
+    }
+    @media (width < 96rem) {
+      background-color: var(--color-base-300);
+    }
+  }
+  .right_sidebar_base_class {
+    display: flex;
+    height: 100%;
+    width: calc(var(--spacing) * 80);
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow-y: auto;
+    padding-inline: calc(var(--spacing) * 3);
+    padding-block: calc(var(--spacing) * 2);
+    @media (width < 96rem) {
+      position: absolute;
+    }
+    @media (width < 96rem) {
+      top: calc(var(--spacing) * 0);
+    }
+    @media (width < 96rem) {
+      right: calc(var(--spacing) * 0);
+    }
+    @media (width < 96rem) {
+      z-index: 1;
+    }
+    @media (width < 96rem) {
+      background-color: var(--color-base-300);
+    }
   }
 }
 .spoiler-checkbox:checked + .spoiler-text {
