--- a/input.css
+++ b/input.css
@@ -111,6 +111,10 @@
         @apply h-4 w-4;
     }
 
+    .loading-button-size {
+        @apply h-5 w-5 2xl:h-7 2xl:w-7 my-2 2xl:my-5;
+    }
+
     .left_sidebar_base_class {
         @apply flex flex-col justify-start w-60 h-full overflow-y-auto p-2 max-2xl:bg-base-300 max-2xl:absolute max-2xl:z-1 max-2xl:top-0 max-2xl:left-0;
     }
