--- a/input.css
+++ b/input.css
@@ -20,7 +20,7 @@
     --color-info: oklch(75.69% 0.1267 254.91);
     --color-info-content: oklch(29% 0.066 243.157);
     --color-success: oklch(72.27% 0.192 149.58);
-    --color-success-content: oklch(37% 0.077 168.94);
+    --color-success-content: oklch(0 0 0);
     --color-warning: oklch(82% 0.189 84.429);
     --color-warning-content: oklch(41% 0.112 45.904);
     --color-error: oklch(52% 0.245 27.325);
