--- a/input.css
+++ b/input.css
@@ -196,6 +196,7 @@
             p-1 2xl:p-2
             rounded-full
             bg-base-100
+            shadow-md/30
             text-sm
             cursor-pointer
             hover:bg-base-content/20
