Policy: add Content Policy

--- a/style/main.scss
+++ b/style/main.scss
@@ -1480,6 +1480,9 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -3910,6 +3913,9 @@
     @media (width < 96rem) {
       background-color: var(--color-base-300);
     }
+    @media (width >= 96rem) {
+      width: calc(var(--spacing) * 100);
+    }
   }
   .right_sidebar_base_class {
     display: flex;
@@ -3937,7 +3943,7 @@
       background-color: var(--color-base-300);
     }
     @media (width >= 96rem) {
-      width: calc(var(--spacing) * 80);
+      width: calc(var(--spacing) * 100);
     }
   }
 }
