--- a/input.css
+++ b/input.css
@@ -232,7 +232,7 @@
     .left_sidebar_base_class {
         @apply
             flex flex-col justify-start
-            w-60 h-full
+            w-60 2xl:w-100 h-full
             overflow-y-auto
             p-2
             max-2xl:bg-base-300 max-2xl:absolute max-2xl:z-1 max-2xl:top-0 max-2xl:left-0;
@@ -241,7 +241,7 @@
     .right_sidebar_base_class {
         @apply
             flex flex-col justify-start gap-2
-            w-60 2xl:w-80 h-full overflow-y-auto
+            w-60 2xl:w-100 h-full overflow-y-auto
             px-3 py-2
             max-2xl:bg-base-300 max-2xl:absolute max-2xl:z-1 max-2xl:top-0 max-2xl:right-0;
     }
