change <LoadIndicators/> to avoid scrolling when <LoadingIcon/> disappear

--- a/input.css
+++ b/input.css
@@ -227,7 +227,7 @@
         @apply h-4 w-4;
     }
 
-    .loading-button-size {
+    .loading-icon-size {
         @apply h-5 w-5 2xl:h-7 2xl:w-7 my-2 2xl:my-5;
     }
 
