--- a/input.css
+++ b/input.css
@@ -38,7 +38,7 @@
 @theme {
     --breakpoint-3xl: 136rem;
 
-    --spacing-input-md: 2.8125rem;
+    --spacing-input-lg: 2.8125rem;
     --spacing-124: 31rem;
     --spacing-128: 32rem;
     --spacing-160: 40rem;
@@ -53,7 +53,7 @@
 @layer components {
     .button-ghost {
         @apply
-            p-1 2xl:p-2
+            p-1 lg:p-2
             rounded-xs
             text-sm
             cursor-pointer
@@ -77,7 +77,7 @@
 
     .button-neutral {
         @apply
-        p-1 2xl:p-2
+        p-1 lg:p-2
         rounded-xs
         bg-base-content/10
         shadow-md/30
@@ -92,7 +92,7 @@
 
     .button-primary {
         @apply
-            p-1 2xl:p-2
+            p-1 lg:p-2
             rounded-xs
             bg-primary
             shadow-md/30
@@ -107,7 +107,7 @@
 
     .button-secondary {
         @apply
-            p-1 2xl:p-2
+            p-1 lg:p-2
             rounded-xs
             bg-secondary
             shadow-md/30
@@ -122,7 +122,7 @@
 
     .button-error {
         @apply
-            p-1 2xl:p-2
+            p-1 lg:p-2
             rounded-xs
             bg-error
             shadow-md/30
@@ -137,7 +137,7 @@
 
     .button-rounded-ghost {
         @apply
-            p-1 2xl:p-2
+            p-1 lg:p-2
             rounded-full
             text-sm
             cursor-pointer
@@ -195,7 +195,7 @@
 
     .button-navbar-activated {
         @apply
-            p-1 2xl:p-2
+            p-1 lg:p-2
             rounded-full
             bg-base-100
             shadow-md/30
@@ -208,19 +208,19 @@
     }
 
     .navbar-icon-size {
-        @apply h-6 w-6 2xl:h-7 2xl:w-7;
+        @apply h-6 w-6 lg:h-7 lg:w-7;
     }
 
     .filter-icon-size {
-        @apply h-5 w-5 2xl:h-7 2xl:w-7;
+        @apply h-5 w-5 lg:h-7 lg:w-7;
     }
 
     .sphere-toolbar-icon-size {
-        @apply h-5 w-5 2xl:h-6 2xl:w-6;
+        @apply h-5 w-5 lg:h-6 lg:w-6;
     }
 
     .content-toolbar-icon-size {
-        @apply h-4 w-4 2xl:h-5 2xl:w-5;
+        @apply h-4 w-4 lg:h-5 lg:w-5;
     }
 
     .editor-button-size {
@@ -228,25 +228,25 @@
     }
 
     .loading-icon-size {
-        @apply h-5 w-5 2xl:h-7 2xl:w-7 my-2 2xl:my-5;
+        @apply h-5 w-5 lg:h-7 lg:w-7 my-2 lg:my-5;
     }
 
     .left_sidebar_base_class {
         @apply
             flex flex-col justify-start
-            shrink-0 w-60 2xl:w-80 3xl:w-100 h-full
+            shrink-0 w-60 lg:w-80 3xl:w-100 h-full
             overflow-y-auto
             p-2
-            max-2xl:bg-base-300 max-2xl:absolute max-2xl:z-1 max-2xl:top-0 max-2xl:left-0;
+            max-lg:bg-base-300 max-lg:absolute max-lg:z-1 max-lg:top-0 max-lg:left-0;
     }
 
     .right_sidebar_base_class {
         @apply
             flex flex-col justify-start gap-2
-            shrink-0 w-60 2xl:w-80 3xl:w-100 h-full
+            shrink-0 w-60 lg:w-80 3xl:w-100 h-full
             overflow-y-auto
             px-3 py-2
-            max-2xl:bg-base-300 max-2xl:absolute max-2xl:z-1 max-2xl:top-0 max-2xl:right-0;
+            max-lg:bg-base-300 max-lg:absolute max-lg:z-1 max-lg:top-0 max-lg:right-0;
     }
 }
 
